--- a/OnlineVoteApplication/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineVoteApplication/Views/Shared/_AdminLayout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewElectionResult">Election Result</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewAdminUsers">Admin Users</a>
+                        </li>
                     </ul>
                 </div>
                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Sign Out</a>
