--- a/OnlineVoteApplication/Views/Admin/ContestentEdit.cshtml
+++ b/OnlineVoteApplication/Views/Admin/ContestentEdit.cshtml
@@ -45,12 +45,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control" required="required" />
+                <input asp-for="State" class="form-control" readonly />
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" required="required" />
+                <input asp-for="City" class="form-control" readonly />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
            <br/>
