--- a/OnlineVoteApplication/Views/Admin/CreateContestent.cshtml
+++ b/OnlineVoteApplication/Views/Admin/CreateContestent.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control" required="required" autocomplete="off" />
+                @Html.DropDownList("State", (SelectList)ViewBag.State, new { @class = "form-control", @required = "required" })
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
